#666 geodataset _source and noDups
